# iceberg-pyspark-sample

./: .gitignore  AGENTS.md  Makefile  README.md  compose.yml  load.py  pyproject.toml  query.py
data/: customers.csv  events.csv  order_items.csv  orders.csv  products.csv
docs/: bronze-query-json-export.md  multi-vendor-ingestion-pattern.md
sql/load/: 01_create_namespace.sql  02_drop_customers.sql  03_drop_products.sql  04_drop_orders.sql  05_drop_order_items.sql  06_create_customers.sql  06_drop_events.sql  08_create_orders.sql  08_create_products.sql  09_create_order_items.sql  11_create_events.sql
sql/query/: 01_orders_in_january.sql  02_line_totals_by_order.sql  03_joined_order_details.sql  04_top_customers_by_spend.sql
trino/etc/: node.properties
trino/etc/catalog/: iceberg.properties
