[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg-local-demo"
version = "0.1.0"
description = "Local Iceberg CSV loader and query scripts"
requires-python = ">=3.11"
dependencies = [
  "pyspark==3.5.1",
]

[tool.setuptools]
py-modules = []
